--- a/blog/templates/blog/article.html
+++ b/blog/templates/blog/article.html
@@ -6,6 +6,10 @@
 
 	<h1>{{ article.titre }} <span class="small">dans {{ article.categorie.nom }}</span></h1>
 	
+	<p>
+		<img src="{{ MEDIA_URL }}{{ article.photo }}" />
+	</p>
+
 	<p class="infos">
 		Rédigé par {{ article.auteur }}, le {{ article.date|date:"DATE_FORMAT" }}
 	</p>
