--- a/blog/templates/blog/article/accueil.html
+++ b/blog/templates/blog/article/accueil.html
@@ -13,7 +13,7 @@
 	    		<img src="{{ MEDIA_URL }}{{ article.photo }} " width="100"/> 
 	    	</p>
 	    	<p>{{ article.contenu|truncatewords_html:80 }}</p>
-	        <p><a href="{% url "blog.views.article" article.id article.slug %}">Lire la suite</a>
+	        <p><a href="{% url "blog.views.article.lire" article.id article.slug %}">Lire la suite</a>
 	    </div>
 	{% empty %}
 	    <p>Aucun article.</p>
