--- a/blog/templates/blog/article/form.html
+++ b/blog/templates/blog/article/form.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-	<form action="{% url "blog.views.article_new" %}" enctype="multipart/form-data" method="post">{% csrf_token %}
+	<form action="{% url "blog.views.article.new" %}" enctype="multipart/form-data" method="post">{% csrf_token %}
 		{{ form.as_p }}
 		<input type="submit" value="Submit" class="btn btn-primary"/>
 	</form>
