--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,13 +7,14 @@
   </head>
 
   <body>
-	{% include "blog/nav.html" %}
+	{% include "blog/shared/nav.html" %}
 
 	<div style="height: 100px"></div>
 
     {% block content %}
     {% endblock %}
 
-    <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
 </html>
